create edit and update function

--- a/src/css/userTable.scss
+++ b/src/css/userTable.scss
@@ -28,6 +28,16 @@ input{
    margin:auto;
 }
 
+.delete-confirmation{
+    p{
+        margin-left: 10px;
+        display:inline;
+    }
+    button{
+        display:inline;
+    }
+}
+
 
 
 
