--- a/src/css/userTable.scss
+++ b/src/css/userTable.scss
@@ -11,33 +11,22 @@ button{
     padding: 5px 10px 5px;
 }
 
-th{
-    font-weight: bold;
-    font-size: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-td{
-    font-size: 16px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
 input{
    margin:auto;
 }
 
-.delete-confirmation{
-    p{
-        margin-left: 10px;
-        display:inline;
+table{
+   th{
+        font-weight: bold;
+        font-size: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
-    button{
-        display:inline;
+    td{
+        font-size: 16px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
-
-
 
 
