--- a/src/css/userTable.scss
+++ b/src/css/userTable.scss
@@ -1,14 +1,14 @@
 $primary-color:#ffd700;
 
 button{
-    border: 2px solid black;
+    border: 1px solid black;
     font-size:16px;
     color:white;
-    box-shadow: 2px;
+    box-shadow: 1px 1px 2px black;
     background-color: $primary-color;
     margin:5px;
     border-radius: 5%;
-    padding: 5px 10px 5px;
+    padding: 5px 20px 5px;
 }
 
 input{
@@ -19,8 +19,8 @@ table{
    th{
         font-weight: bold;
         font-size: 20px;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding: 10px;
+        border-bottom: 1px solid black;
     }
     td{
         font-size: 16px;
